Moved LearningResources pages into Areas
Moved LearningResources pages into Areas

--- a/web/Areas/LearningResources/Pages/Delete.cshtml
+++ b/web/Areas/LearningResources/Pages/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NetLearnerWeb.Pages.LearningResources.DeleteModel
+@model NetLearnerWeb.Areas.LearningResources.Pages.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
