--- a/web/Areas/LearningResources/Pages/Details.cshtml
+++ b/web/Areas/LearningResources/Pages/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NetLearnerWeb.Pages.LearningResources.DetailsModel
+@model NetLearnerWeb.Areas.LearningResources.Pages.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
