--- a/web/Areas/LearningResources/Pages/Index.cshtml
+++ b/web/Areas/LearningResources/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NetLearnerWeb.Pages.LearningResources.IndexModel
+@model NetLearnerWeb.Areas.LearningResources.Pages.IndexModel
 
 @{
     ViewData["Title"] = "Index";
