--- a/web/Areas/LearningResources/Pages/Create.cshtml
+++ b/web/Areas/LearningResources/Pages/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model NetLearnerWeb.Pages.LearningResources.EditModel
+@model NetLearnerWeb.Areas.LearningResources.Pages.CreateModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h2>Edit</h2>
+<h2>Create</h2>
 
 <h4>LearningResource</h4>
 <hr />
@@ -13,7 +13,6 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="LearningResource.Id" />
             <div class="form-group">
                 <label asp-for="LearningResource.Name" class="control-label"></label>
                 <input asp-for="LearningResource.Name" class="form-control" />
@@ -25,14 +24,14 @@
                 <span asp-validation-for="LearningResource.Url" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
