moved LearningResources pages back to /Pages
moved LearningResources pages back to /Pages

--- a/web/Pages/LearningResources/Delete.cshtml
+++ b/web/Pages/LearningResources/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NetLearnerWeb.Areas.LearningResources.Pages.DeleteModel
+@model NetLearnerWeb.Pages.LearningResources.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
