--- a/web/Pages/LearningResources/Details.cshtml
+++ b/web/Pages/LearningResources/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NetLearnerWeb.Areas.LearningResources.Pages.DetailsModel
+@model NetLearnerWeb.Pages.LearningResources.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
