--- a/web/Pages/LearningResources/Index.cshtml
+++ b/web/Pages/LearningResources/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NetLearnerWeb.Areas.LearningResources.Pages.IndexModel
+@model NetLearnerWeb.Pages.LearningResources.IndexModel
 
 @{
     ViewData["Title"] = "Index";
