Replaced old web21 app with web22 from template
Replaced old web21 app with web22 from template

--- a/web/Pages/_ViewImports.cshtml
+++ b/web/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using NetLearnerWeb
-@using NetLearnerWeb.Data
-@namespace NetLearnerWeb.Pages
+@using web
+@using web.Data
+@namespace web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
